Fix overflow in css

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -100,7 +100,7 @@ nav div {
 .login-container {
   padding: 10px;
   margin-bottom: 50px;
-  overflow: scroll;
+  overflow: hidden;
   margin-top: 65px;
 }
 
